@@ -5,6 +5,7 @@
 - Fix: Medkit not properly working in singleplayer.
 - Fix: Selection of best weapon on depleted ammo and player spawn.
 - Fix: Settings not correctly clamped.
+- Fix: Potential crash after changelevel.
 
 0.9.5
 - Improved: Add projected textures as an option for physcannon glow, enabled by default (physcannon_glow = 1)
